Mon Jan  1 23:40:01 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (link_file): New function.

	* README: Mention CRLF vs. LF in cvsnt.mak.  Other minor revisions.

Fri Dec 22 12:00:00 1995  Jim Kingdon  <kingdon@peary.cyclic.com>

	* run.c (filter_stream_through_program): On error, error() rather
	than returning -1.

Thu Dec 21 16:00:00 1995  Jim Kingdon  <kingdon@peary.cyclic.com>

	* options.h: Don't define NO_SOCKET_TO_FD.

Mon Dec 18 09:57:29 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Explain NO_SOCKET_TO_FD some more.

Sun Dec 17 21:19:18 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * options.h (NO_SOCKET_TO_FD): define to 1.

Tue Dec 12 19:18:00 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * options.h (AUTH_CLIENT_SUPPORT, AUTH_SERVER_SUPPORT): these
        replace CVS_LOGIN.
        (RCSBIN_DFLT): expand comment.

Mon Dec 11 12:43:35 1995  adamg  <adamg@microsoft.com>

	* config.h: Add INITIALIZE_SOCKET_SUBSYSTEM macro to ensure that
	winsock is initialized early enough for the gethostname() in
	main.c to succeed.
	* rcmd.c: Remove from init_winsock(), and rcmd() code that
	initialized winsock on demand.

Thu Dec  7 14:49:16 1995  Jim Meyering  (meyering@comco.com)

	* filesubr.c (isaccessible): Rename from isaccessable.
	Update callers.

Mon Dec  4 10:46:31 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* The following change was copied from src/filesubr.c.  This is
	because we need filesubr.c to compile, not because we are trying
	to make set*id work on NT (if it even has set*id).
	* filesubr.c (isaccessable): new function.  Checks access-rights
	for files like access(), but is getxid-safe.  Falls back to
	access() if SETXID_SUPPORT is not enabled.
	(isfile): replace stat() by isaccessable(file, F_OK)
	(isreadable): replace access() by isaccessable()
	(iswritable): ditto
	(make_directory): rename local variable buf to sb

Fri Nov 24 11:17:16 EST 1995  Boleslaw Ciesielski  <bolek@viewlogic.com>
